<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestExample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>

</resources>
